2007-05-31  Inge Wallin  <inge@lysator.liu.se>

	Rename KAtlasControl into MarbleControlBox
	* src/katlastoolbox.ui  -> src/MarbleControlBox.ui
	* src/katlastoolbox.h   -> src/MarbleControlBox.h
	* src/katlastoolbox.cpp -> src/MarbleControlBox.cpp
	* src/CmakeLists.txt: use new name
	* src/marbleosx.pro:  use new name
	* src/katlascontrol.cpp: Use new class name
	* src/DESIGN: Update documentation

2007-05-29  Torsten Rahn  <rahn@kde.org>

Some fixes:

    * Changed zPointLimit to avoid "Green Pacific" bug
    * Changed xmlhandler to change placemark symbols according to legend
    * Added resulting cityplacemarks.cache file

2007-05-28  Inge Wallin  <inge@lysator.liu.se>

	Fix Krazy issue: Check for Qt classes that should not be used
	* src/QtMainWindow.cpp (exportMapScreenShot): Suppress false
	positives for krazy tests
	* src/KdeMainWindow.cpp (exportMapScreenShot): Use KMessageBox
	instead of QMessageBox.

	Fix Krazy issue: missing tags: copyright
	Fix Krazy issue: missing license
	* tools/palettegen/palettegen.cpp (main): Generate header with
	Copyright and license
	* src/texturepalette.cpp: Regenerate this file with the above
	mentioned header.

	Fix Krazy issue: inappropriate pass-by-value function args
	* src/TextureTile.h (signal downloadTile): Pass QString parameter
	by reference
	* src/HttpDownloadManager.cpp (addJob): Pass QString parameter by
	reference.
	* src/TileLoader.cpp (loadTile): Connect with parameter QString &

	Fix Krazy issue: Proper include directives
	* tools/palettegen/palettegen.cpp: 
	* tools/texissor/texissor.cpp: Fix includes

2007-05-27  Torsten Rahn  <rahn@kde.org>

    * Added Legend (breaks placemarks)
    * compiles with Qt 4.2 again

2007-05-26  Inge Wallin  <inge@lysator.liu.se>

	Rename katlasview.{h,cpp} into MarbleWidget
	* src/katlasview.cpp -> src/MarbleWidget.cpp: 
	src/katlasview.h   -> src/MarbleWidget.h
	src/katlascontrol.h,          src/katlascontrol.cpp,
	src/katlasviewinputhandler.h, src/katlasviewinputhandler.cpp,